# agent-resources

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TAGS  agent_resources.c  agent_resources.h  arena.c  arena.h  base.c  base.h  base_parse  build-pkgmanager.sh  build.sh  build_check_distro.sh  build_proto.sh  compile.sh  configure.cpp  ctags.sh  dnf_handler.cpp  format.sh  libalpm_handler.cpp  libapt_handler.cpp  libdnf_handler.cpp  pkgm.cpp  pkgm.hpp  pkgmanager.c  ports.c  resources.c  resources.h  resources_main.c  run_tests.sh  tags  unity.cc
.gitea/workflows/: main-build.yaml
.github/workflows/: main.yml
agent/: agent_core.cc  core.cc
auth/: auth.cc
base/: base.c  base.h  base_arena.c  base_arena.h  base_parse.c  base_parse.h
common/: logger.c  logger.cc
core/: core.cc
dbus/: dbushandler.cc  dbushandler.h
forge/: dep.h  forge.c
grpc/: grpc_include.h
grpc/handlers/: resource_handler.cc
grpc/server/: server.cc
grpc_server/: server.cc
grpc_service/: grpc_service.cc  grpc_service.h
journal/: journald.c  journald.cc  journald.h
libnet/: net.c  net.cc
libpkg/: pkg.c  pkg.h
libres/: resources.cc  resources.h
pkgm/: arch_pac.cpp  build-pkgm.sh  build-pkgmanager.sh  configure.c  fedora_dnf.cpp  pacman.cpp  pkgm.cpp  pkgm.hpp  pkgm_main.cpp
source/: .clangd  Makefile  build.sh  device.c  lib.c  lib.h  main  main.c  main.cpp
temp/: test_cpu_resources  test_disk_resources
tests/: test_arena.cc  test_cpu_resources.cc  test_disk_resources.cc  test_ram_resources.cc
vmmg/: README.md  qc.c
(+27 files in other folders)
